--- a/_notebooks/2022-09-25-js.ipynb
+++ b/_notebooks/2022-09-25-js.ipynb
@@ -27,87 +27,368 @@
     }
    ],
    "source": [
-    "function logItType(output) {\n",
-    "    console.log(output);\n",
-    "}\n",
-    "function Song1(name, artist, genre) {\n",
-    "    this.name = name;\n",
-    "    this.artist = artist;\n",
-    "    this.genre = genre;\n",
-    "}\n",
+    "import java.awt.Color;\n",
+    "import java.awt.image.BufferedImage;\n",
+    "import java.awt.Image;\n",
+    "import java.awt.Graphics2D;\n",
     "\n",
-    "// define a JSON conversion \"method\" associated with Person\n",
-    "Song1.prototype.toJSON = function() {\n",
-    "    const obj = {name: this.name, artist: this.artist, genre: this.genre};\n",
-    "    const json = JSON.stringify(obj);  // json/string is useful when passing data on internet\n",
-    "    return json;\n",
-    "}\n",
+    "import java.io.File;\n",
+    "import java.io.FileWriter;\n",
+    "import java.io.IOException;\n",
+    "import java.io.PrintWriter;\n",
+    "import java.nio.file.Files;\n",
+    "import java.nio.file.Path;\n",
+    "import java.nio.file.Paths;\n",
     "\n",
-    "// make a new Person and assign to variable teacher\n",
-    "var popularSong = new Song1(\"Power\", \"Kanye West\", \"Rap\");  // object type is easy to work with in JavaScript\n",
-    "logItType(popularSong); \n",
-    "// logItType(teacher.toJSON());"
+    "import javax.imageio.stream.ImageOutputStream;\n",
+    "import javax.imageio.stream.ImageInputStream;\n",
+    "import javax.imageio.metadata.IIOMetadata;\n",
+    "import javax.imageio.IIOImage;\n",
+    "import javax.imageio.ImageIO;\n",
+    "import javax.imageio.ImageWriteParam;\n",
+    "import javax.imageio.ImageWriter;\n",
+    "import javax.imageio.ImageReader;\n",
+    "import javax.imageio.ImageTypeSpecifier;\n",
+    "\n",
+    "public class Pics {\n",
+    "    private final String inDir = \"images/\"; // location of images\n",
+    "    private final String outDir = \"images/tmp/\";  // location of created files\n",
+    "    private String inFile;\n",
+    "    private String resizedFile;\n",
+    "    private String asciiFile; \n",
+    "    private String greyScaleFile;\n",
+    "    private String redScaleFile;\n",
+    "    private String blueScaleFile;\n",
+    "    private String greenScaleFile;\n",
+    "    private String ext;   // extension of file\n",
+    "    private long bytes;\n",
+    "    private int width;\n",
+    "    private int height;\n",
+    "\n",
+    "    // Constructor obtains attributes of picture\n",
+    "    public Pics(String name, String ext) {\n",
+    "        this.ext = ext;\n",
+    "        this.inFile = this.inDir + name + \".\" + ext;\n",
+    "        this.resizedFile = this.outDir + name + \".\" + ext;\n",
+    "        this.asciiFile = this.outDir + name + \".txt\";\n",
+    "        this.greyScaleFile = this.outDir + \"Grey\" + name + \".\" + ext;\n",
+    "        this.redScaleFile = this.outDir + \"Red\" + name + \".\" + ext;\n",
+    "        this.blueScaleFile = this.outDir + \"Blue\" + name + \".\" + ext;\n",
+    "        this.greenScaleFile = this.outDir + \"Green\" + name + \".\" + ext;\n",
+    "        this.setStats();\n",
+    "    }\n",
+    "\n",
+    "    \n",
+    "    // An image contains metadata, namely size, width, and height\n",
+    "    public void setStats() {\n",
+    "        BufferedImage img;\n",
+    "        try {\n",
+    "            Path path = Paths.get(this.inFile);\n",
+    "            this.bytes = Files.size(path);\n",
+    "            img = ImageIO.read(new File(this.inFile));\n",
+    "            this.width = img.getWidth();\n",
+    "            this.height = img.getHeight();\n",
+    "        } catch (IOException e) {\n",
+    "        }\n",
+    "    }\n",
+    "\n",
+    "    // Console print of data\n",
+    "    public void printStats(String msg) {\n",
+    "        System.out.println(msg + \": \" + this.bytes + \" \" + this.width + \"x\" + this.height + \"  \" + this.inFile);\n",
+    "    }\n",
+    "\n",
+    "    // Convert scaled image into buffered image\n",
+    "    public static BufferedImage convertToBufferedImage(Image img) {\n",
+    "\n",
+    "        // Create a buffered image with transparency\n",
+    "        BufferedImage bi = new BufferedImage(\n",
+    "                img.getWidth(null), img.getHeight(null),\n",
+    "                BufferedImage.TYPE_INT_ARGB);\n",
+    "\n",
+    "        // magic?\n",
+    "        Graphics2D graphics2D = bi.createGraphics();\n",
+    "        graphics2D.drawImage(img, 0, 0, null);\n",
+    "        graphics2D.dispose();\n",
+    "\n",
+    "        return bi;\n",
+    "    }\n",
+    "    \n",
+    "    // Scale or reduce to \"scale\" percentage provided\n",
+    "    public void resize(int scale) {\n",
+    "        BufferedImage img = null;\n",
+    "        Image resizedImg = null;  \n",
+    "\n",
+    "        int width = (int) (this.width * (scale/100.0) + 0.5);\n",
+    "        int height = (int) (this.height * (scale/100.0) + 0.5);\n",
+    "\n",
+    "        try {\n",
+    "            // read an image to BufferedImage for processing\n",
+    "            img = ImageIO.read(new File(this.inFile));  // set buffer of image data\n",
+    "            // create a new BufferedImage for drawing\n",
+    "            resizedImg = img.getScaledInstance(width, height, Image.SCALE_SMOOTH);\n",
+    "        } catch (IOException e) {\n",
+    "            return;\n",
+    "        }\n",
+    "\n",
+    "        try {\n",
+    "            ImageIO.write(convertToBufferedImage(resizedImg), this.ext, new File(resizedFile));\n",
+    "        } catch (IOException e) {\n",
+    "            return;\n",
+    "        }\n",
+    "        \n",
+    "        this.inFile = this.resizedFile;  // use scaled file vs original file in Class\n",
+    "        this.setStats();\n",
+    "    }\n",
+    "    \n",
+    "    // convert every pixel to an ascii character (ratio does not seem correct)\n",
+    "    public void convertToAscii() {\n",
+    "        BufferedImage img = null;\n",
+    "        PrintWriter asciiPrt = null;\n",
+    "        FileWriter asciiWrt = null;\n",
+    "\n",
+    "        try {\n",
+    "            File file = new File(this.asciiFile);\n",
+    "            Files.deleteIfExists(file.toPath()); \n",
+    "        } catch (IOException e) {\n",
+    "            System.out.println(\"Delete File error: \" + e);\n",
+    "        }\n",
+    "\n",
+    "        try {\n",
+    "            asciiPrt = new PrintWriter(asciiWrt = new FileWriter(this.asciiFile, true));\n",
+    "        } catch (IOException e) {\n",
+    "            System.out.println(\"ASCII out file create error: \" + e);\n",
+    "        }\n",
+    "\n",
+    "        try {\n",
+    "            img = ImageIO.read(new File(this.inFile));\n",
+    "        } catch (IOException e) {\n",
+    "        }\n",
+    "\n",
+    "        for (int i = 0; i < img.getHeight(); i+=3) {\n",
+    "            for (int j = 0; j < img.getWidth(); j+=1) {\n",
+    "                Color col = new Color(img.getRGB(j, i));\n",
+    "                double pixVal = (((col.getRed() * 0.30) + (col.getBlue() * 0.59) + (col\n",
+    "                        .getGreen() * 0.11)));\n",
+    "                try {\n",
+    "                    asciiPrt.print(asciiChar(pixVal));\n",
+    "                    asciiPrt.flush();\n",
+    "                    asciiWrt.flush();\n",
+    "                } catch (Exception ex) {\n",
+    "                }\n",
+    "            }\n",
+    "            try {\n",
+    "                asciiPrt.println(\"\");\n",
+    "                asciiPrt.flush();\n",
+    "                asciiWrt.flush();\n",
+    "            } catch (Exception ex) {\n",
+    "            }\n",
+    "        }\n",
+    "    }\n",
+    "\n",
+    "    // conversion table, there may be better out there ie https://www.billmongan.com/Ursinus-CS173-Fall2020/Labs/ASCIIArt\n",
+    "    public String asciiChar(double g) {\n",
+    "        String str = \" \";\n",
+    "        if (g >= 240) {\n",
+    "            str = \" \";\n",
+    "        } else if (g >= 210) {\n",
+    "            str = \".\";\n",
+    "        } else if (g >= 190) {\n",
+    "            str = \"*\";\n",
+    "        } else if (g >= 170) {\n",
+    "            str = \"+\";\n",
+    "        } else if (g >= 120) {\n",
+    "            str = \"^\";\n",
+    "        } else if (g >= 110) {\n",
+    "            str = \"&\";\n",
+    "        } else if (g >= 80) {\n",
+    "            str = \"8\";\n",
+    "        } else if (g >= 60) {\n",
+    "            str = \"#\";\n",
+    "        } else {\n",
+    "            str = \"@\";\n",
+    "        }\n",
+    "        return str;\n",
+    "    }\n",
+    "\n",
+    "    public void greyScale() {\n",
+    "        BufferedImage img = null;\n",
+    "        try {\n",
+    "            File file = new File(this.greyScaleFile);\n",
+    "            Files.deleteIfExists(file.toPath()); \n",
+    "        } catch (IOException e) {\n",
+    "            System.out.println(\"Delete File error: \" + e);\n",
+    "        }\n",
+    "        try {\n",
+    "            img = ImageIO.read(new File(this.inFile));\n",
+    "        } catch (IOException e) {\n",
+    "        }\n",
+    "        for (int i = 0; i < img.getHeight(); i++) {\n",
+    "            for (int j = 0; j < img.getWidth(); j++) {\n",
+    "                Color col = new Color(img.getRGB(j, i));\n",
+    "                int grey = (int)(col.getRed()*0.3 + col.getGreen()*0.59 + col.getBlue()*0.11);\n",
+    "                try {\n",
+    "                    Color rgb = new Color(grey, grey, grey);\n",
+    "                    img.setRGB(j, i, rgb.getRGB());\n",
+    "                } catch (Exception ex) {\n",
+    "                }\n",
+    "            }\n",
+    "        }\n",
+    "        try {\n",
+    "            ImageIO.write(img, \"png\", new File(this.greyScaleFile));\n",
+    "        } catch (Exception ex) {\n",
+    "        }\n",
+    "    }\n",
+    "\n",
+    "    public void redScale() {\n",
+    "        BufferedImage img = null;\n",
+    "        try {\n",
+    "            File file = new File(this.redScaleFile);\n",
+    "            Files.deleteIfExists(file.toPath()); \n",
+    "        } catch (IOException e) {\n",
+    "            System.out.println(\"Delete File error: \" + e);\n",
+    "        }\n",
+    "        try {\n",
+    "            img = ImageIO.read(new File(this.inFile));\n",
+    "        } catch (IOException e) {\n",
+    "        }\n",
+    "        for (int i = 0; i < img.getHeight(); i++) {\n",
+    "            for (int j = 0; j < img.getWidth(); j++) {\n",
+    "                Color col = new Color(img.getRGB(j, i));\n",
+    "                int red = (int)(col.getRed());\n",
+    "                try {\n",
+    "                    Color rgb = new Color(red, 0, 0);\n",
+    "                    img.setRGB(j, i, rgb.getRGB());\n",
+    "                } catch (Exception ex) {\n",
+    "                }\n",
+    "            }\n",
+    "        }\n",
+    "        try {\n",
+    "            ImageIO.write(img, \"png\", new File(this.redScaleFile));\n",
+    "        } catch (Exception ex) {\n",
+    "        }\n",
+    "    }\n",
+    "\n",
+    "    public void greenScale() {\n",
+    "        BufferedImage img = null;\n",
+    "        try {\n",
+    "            File file = new File(this.greenScaleFile);\n",
+    "            Files.deleteIfExists(file.toPath()); \n",
+    "        } catch (IOException e) {\n",
+    "            System.out.println(\"Delete File error: \" + e);\n",
+    "        }\n",
+    "        try {\n",
+    "            img = ImageIO.read(new File(this.inFile));\n",
+    "        } catch (IOException e) {\n",
+    "        }\n",
+    "        for (int i = 0; i < img.getHeight(); i++) {\n",
+    "            for (int j = 0; j < img.getWidth(); j++) {\n",
+    "                Color col = new Color(img.getRGB(j, i));\n",
+    "                int green = (int)(col.getGreen());\n",
+    "                try {\n",
+    "                    Color rgb = new Color(0, green, 0);\n",
+    "                    img.setRGB(j, i, rgb.getRGB());\n",
+    "                } catch (Exception ex) {\n",
+    "                }\n",
+    "            }\n",
+    "        }\n",
+    "        try {\n",
+    "            ImageIO.write(img, \"png\", new File(this.greenScaleFile));\n",
+    "        } catch (Exception ex) {\n",
+    "        }\n",
+    "    }\n",
+    "\n",
+    "    public void blueScale() {\n",
+    "        BufferedImage img = null;\n",
+    "        try {\n",
+    "            File file = new File(this.blueScaleFile);\n",
+    "            Files.deleteIfExists(file.toPath()); \n",
+    "        } catch (IOException e) {\n",
+    "            System.out.println(\"Delete File error: \" + e);\n",
+    "        }\n",
+    "        try {\n",
+    "            img = ImageIO.read(new File(this.inFile));\n",
+    "        } catch (IOException e) {\n",
+    "        }\n",
+    "        for (int i = 0; i < img.getHeight(); i++) {\n",
+    "            for (int j = 0; j < img.getWidth(); j++) {\n",
+    "                Color col = new Color(img.getRGB(j, i));\n",
+    "                int blue = (int)(col.getBlue());\n",
+    "                try {\n",
+    "                    Color rgb = new Color(0, 0, blue);\n",
+    "                    img.setRGB(j, i, rgb.getRGB());\n",
+    "                } catch (Exception ex) {\n",
+    "                }\n",
+    "            }\n",
+    "        }\n",
+    "        try {\n",
+    "            ImageIO.write(img, \"png\", new File(this.blueScaleFile));\n",
+    "        } catch (Exception ex) {\n",
+    "        }\n",
+    "    }\n",
+    "\n",
+    "    // tester/driver\n",
+    "    public static void main(String[] args) throws IOException {\n",
+    "        Pics ascii = new Pics(\"MonaLisa\", \"png\");\n",
+    "        ascii.printStats(\"Original\");\n",
+    "        ascii.resize(33);\n",
+    "        ascii.printStats(\"Scaled\");\n",
+    "        ascii.convertToAscii();\n",
+    "\n",
+    "        Pics grey = new Pics(\"MonaLisa\", \"png\");\n",
+    "        grey.greyScale();\n",
+    "\n",
+    "        Pics red = new Pics(\"MonaLisa\", \"png\");\n",
+    "        red.redScale();\n",
+    "        \n",
+    "        Pics green = new Pics(\"MonaLisa\", \"png\");\n",
+    "        green.greenScale();\n",
+    "\n",
+    "        Pics blue = new Pics(\"MonaLisa\", \"png\");\n",
+    "        blue.blueScale();\n",
+    "    }\n",
+    "}\n",
+    "Pics.main(null);"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "function logItType(output) {\n",
-    "  console.log(output);\n",
-    "}\n",
-    "function Song1(name, artist, genre) {\n",
-    "  this.name = name;\n",
-    "  this.artist = artist;\n",
-    "  this.genre = genre;\n",
-    "}\n",
-    "\n",
-    "// define a JSON conversion \"method\" associated with Person\n",
-    "Song1.prototype.toJSON = function() {\n",
-    "  const obj = {name: this.name, artist: this.artist, genre: this.genre};\n",
-    "  const json = JSON.stringify(obj);  // json/string is useful when passing data on internet\n",
-    "  return json;\n",
-    "}\n",
-    "\n",
-    "// make a new Person and assign to variable teacher\n",
-    "var popularSong = new Song1(\"Power\", \"Kanye West\", \"Rap\");  // object type is easy to work with in JavaScript\n",
-    "logItType(popularSong); \n",
-    "// logItType(teacher.toJSON());\n",
-    "\n",
-    "const resultContainer = document.getElementById(\"result\");\n",
-    "for (const row of data) {\n",
-    "    // tr for each row\n",
-    "    const tr = document.createElement(\"tr\");\n",
-    "    // td for each column\n",
-    "    const name = document.createElement(\"td\");\n",
-    "    const artist = document.createElement(\"td\");\n",
-    "    const genre = document.createElement(\"td\");\n",
-    "    // data is specific to the API\n",
-    "    name.innerHTML = row.name;\n",
-    "    artist.innerHTML = row.artist; \n",
-    "    genre.innerHTML = row.genre; \n",
-    "    // this build td's into tr\n",
-    "    tr.appendChild(name);\n",
-    "    tr.appendChild(artist);\n",
-    "    tr.appendChild(genre);\n",
-    "    // add HTML to container\n",
-    "    resultContainer.appendChild(tr);\n",
-    "}"
+    "![](images/MonaLisa.PNG)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![](images/temp/BlueMonaLisa.PNG)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![](images/temp/GreenMonaLisa.PNG)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![](images/temp/GreyMonaLisa.PNG)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "JavaScript (Node.js)",
-   "language": "javascript",
-   "name": "javascript"
+   "display_name": "Java",
+   "language": "java",
+   "name": "java"
   },
   "language_info": {
    "file_extension": ".js",
    "mimetype": "application/javascript",
-   "name": "javascript",
+   "name": "java",
    "version": "6.11.2"
   },
   "orig_nbformat": 4
