--- a/_notebooks/2022-10-02-img-manipulation.ipynb
+++ b/_notebooks/2022-10-02-img-manipulation.ipynb
@@ -436,21 +436,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![](images/temp/BlueMonaLisa.PNG)"
+    "![](images/tmp/BlueMonaLisa.PNG)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![](images/temp/GreenMonaLisa.PNG)"
+    "![](images/tmp/GreenMonaLisa.PNG)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![](images/temp/GreyMonaLisa.PNG)"
+    "![](images/tmp/GreyMonaLisa.PNG)"
    ]
   }
  ],
