--- a/_notebooks/2022-10-02-rapidapi.ipynb
+++ b/_notebooks/2022-10-02-rapidapi.ipynb
@@ -102,6 +102,22 @@
     "\n",
     "System.out.println(response.body());"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "HttpRequest request = HttpRequest.newBuilder()\n",
+    "\t\t.uri(URI.create(\"https://billboard3.p.rapidapi.com/hot-100?date=2022-07-07&range=1-10\"))\n",
+    "\t\t.header(\"X-RapidAPI-Key\", \"9e4650470emshc2461cc01c07b29p18b9b5jsnfa759ab87fca\")\n",
+    "\t\t.header(\"X-RapidAPI-Host\", \"billboard3.p.rapidapi.com\")\n",
+    "\t\t.method(\"GET\", HttpRequest.BodyPublishers.noBody())\n",
+    "\t\t.build();\n",
+    "HttpResponse<String> response = HttpClient.newHttpClient().send(request, HttpResponse.BodyHandlers.ofString());\n",
+    "System.out.println(response.body());"
+   ]
   }
  ],
  "metadata": {
@@ -116,12 +132,12 @@
    "mimetype": "text/x-java-source",
    "name": "java",
    "pygments_lexer": "java",
-   "version": "11.0.16+8-post-Ubuntu-0ubuntu120.04"
+   "version": "3.9.12"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
+    "hash": "a0999e54f8d5d75fb1c2165e12eb6845224e16a67eca081f95b1f6d769780671"
    }
   }
  },
