--- a/_notebooks/2022-10-02-img-manipulation.ipynb
+++ b/_notebooks/2022-10-02-img-manipulation.ipynb
@@ -15,28 +15,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "javax.imageio.IIOException: Can't read input file!\n",
-      "\tat java.desktop/javax.imageio.ImageIO.read(ImageIO.java:1308)\n",
-      "\tat REPL.$JShell$34$ImageIOTest.main($JShell$34.java:48)\n",
-      "\tat REPL.$JShell$35.do_it$($JShell$35.java:35)\n",
-      "\tat java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)\n",
-      "\tat java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)\n",
-      "\tat java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)\n",
-      "\tat java.base/java.lang.reflect.Method.invoke(Method.java:566)\n",
-      "\tat io.github.spencerpark.ijava.execution.IJavaExecutionControl.lambda$execute$1(IJavaExecutionControl.java:95)\n",
-      "\tat java.base/java.util.concurrent.FutureTask.run(FutureTask.java:264)\n",
-      "\tat java.base/java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1128)\n",
-      "\tat java.base/java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:628)\n",
-      "\tat java.base/java.lang.Thread.run(Thread.java:829)\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -81,7 +66,11 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -420,28 +409,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![](images/MonaLisa.PNG)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "![](images/tmp/BlueMonaLisa.PNG)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "![](images/tmp/GreenMonaLisa.PNG)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "![](images/tmp/GreyMonaLisa.PNG)"
+    "ASCII: https://github.com/peacekeeper6/fastpages/blob/master/_notebooks/images/tmp/MonaLisa.txt\n",
+    "Grey:\n",
+    "![Gray](images/tmp/GreyMonaLisa.png)\n",
+    "Red:\n",
+    "![Red](images/tmp/RedMonaLisa.png)\n",
+    "Green:\n",
+    "![Green](images/tmp/GreenMonaLisa.png)\n",
+    "Blue:\n",
+    "![Blue](images/tmp/BlueMonaLisa.png)"
    ]
   }
  ],
@@ -455,7 +431,7 @@
    "codemirror_mode": "java",
    "file_extension": ".jshell",
    "mimetype": "text/x-java-source",
-   "name": "java",
+   "name": "Java",
    "pygments_lexer": "java",
    "version": "11.0.16+8-post-Ubuntu-0ubuntu120.04"
   },
