--- a/2022-10-09-arraylists.ipynb
+++ b/2022-10-09-arraylists.ipynb
@@ -4,10 +4,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# RapidAPI Notebook\n",
-    "> RapidAPI\n",
+    "# ArrayLists Notebook\n",
+    "> ArrayLists\n",
     "\n",
-    "- title: RapidAPI Notebook\n",
+    "- title: ArrayLists Notebook\n",
     "- toc: true\n",
     "- categories: [jupyter]\n",
     "- image: images/tools.png"
