--- a/_notebooks/2022-08-22-javanb.ipynb
+++ b/_notebooks/2022-08-22-javanb.ipynb
@@ -15,13 +15,130 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 1,
    "metadata": {},
-   "source": []
+   "outputs": [
+    {
+     "ename": "CompilationException",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1m\u001b[30m|   \u001b[1m\u001b[30m        while (/*Write this expression */\u001b[0m\u001b[1m\u001b[30m\u001b[41m\u001b[0m\u001b[1m\u001b[30m)\u001b[0m",
+      "\u001b[1m\u001b[31millegal start of expression\u001b[0m",
+      ""
+     ]
+    }
+   ],
+   "source": [
+    "import java.util.Scanner;\n",
+    "\n",
+    "public class Checker \n",
+    "{\n",
+    "    public static void main(String[] args) \n",
+    "    {\n",
+    "        int number;  \n",
+    "\t\n",
+    "        // Create a Scanner object for keyboard input.  \n",
+    "        Scanner keyboard = new Scanner(System.in);  \n",
+    "             \n",
+    "        // Get a number from the user.  \n",
+    "        System.out.print(\"Enter a number in the range of 1 through 100: \");  \n",
+    "        number = keyboard.nextInt();  \n",
+    "\n",
+    "        while (int i = 0; i < 100; i++/*Write this expression */)\n",
+    "        {  \n",
+    "           System.out.print(\"Invalid input. Enter a number in the range \" +  \n",
+    "                            \"of 1 through 100: \");  \n",
+    "           number = keyboard.nextInt();  \n",
+    "        } \n",
+    "    }\n",
+    "}"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "public class LoopConversion \n",
+    "{\n",
+    "    public static void main(String[] args) \n",
+    "    {\n",
+    "        // int count = 0;\n",
+    "        //convert to for loop\n",
+    "        // while (count < 5)\n",
+    "        // {\n",
+    "        //     System.out.println(\"count is \" + count);\n",
+    "        //     count++;\n",
+    "        // }\n",
+    "        for (int count = 0; count < 5; count++)\n",
+    "        {\n",
+    "            System.out.println(\"count is \" + count);\n",
+    "        }\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "int i = 0;\n",
+    "// while (i < 5) {\n",
+    "//     System.out.println(i);\n",
+    "//     i++;\n",
+    "// }\n",
+    "for (int i = 0; i < 5; i++) {\n",
+    "    System.out.println(i);\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "CompilationException",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1m\u001b[30m|   \u001b[1m\u001b[30m        int a = \u001b[0m\u001b[1m\u001b[30m\u001b[41mMath.random()\u001b[0m\u001b[1m\u001b[30m;\u001b[0m",
+      "\u001b[1m\u001b[31mincompatible types: possible lossy conversion from double to int\u001b[0m",
+      ""
+     ]
+    }
+   ],
+   "source": [
+    "public class Main {\n",
+    "    public static void homework(String[] args) {\n",
+    "        int a = Math.random();\n",
+    "        System.out.println(a);\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "Main.homework(null);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
